--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lint": "pnpm typecheck && eslint .",
     "lint:fix": "eslint --fix .",
     "prepublishOnly": "pnpm test && pnpm lint && pnpm format:check && pnpm build",
-    "test": "node --import tsx --test \"**/*.test.ts\"",
+    "test": "mocha \"**/*.test.ts\"",
     "typecheck": "tsc --noEmit"
   },
   "prettier": "@shahrad/prettier-config",
@@ -42,9 +42,11 @@
     "@shahrad/eslint-config": "^1.0.0",
     "@shahrad/prettier-config": "^1.2.2",
     "@sindresorhus/tsconfig": "^7.0.0",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.13.13",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
+    "mocha": "^11.1.0",
     "prettier": "^3.5.3",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
